# cibylc-revived

./: .gitignore  CMakeLists.txt  build.sh  build.zig  build.zig.zon  fmt.sh
cmake/: elfutils.cmake  zig-c++  zig-cc  zlib.cmake
cmake/shims/: argp.h
include/: basicblock.hh  builtins.hh  config.hh  controller.hh  cpp-utils.hh  elf.hh  emit.hh  entity.hh  function.hh  functioncolocation.hh  instruction.hh  javaclass.hh  javamethod.hh  mips-dwarf.h  mips.hh  registerallocator.hh  syscall-wrappers.hh  syscall.hh  utils.h
src/: basicblock.cc  builtins.cc  calltablemethod.cc  codeblock.cc  controller.cc  elf.cc  emit.cc  function.cc  functioncolocation.cc  instruction.cc  javaclass.cc  javamethod.cc  main.cc  mips-dwarf.c  mips.cc  registerallocator.cc  string-instruction.cc  syscall-wrappers.cc  utils.cc
src/builtins/: 64-bit-muldiv.cc  exceptions.cc  softfloat.cc
src/instructions/: catch.cc  fpu.cc  ifmt.cc  jfmt.cc  memory.cc  muldiv.cc  nop.cc  rfmt.cc  set.cc  syscall.cc
